SONAR-22872 Purge measures table